--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,6 +148,7 @@ elseif(MACOSX)
 		file(COPY assets DESTINATION ${CMAKE_BINARY_DIR}/${BUILD_NAME}.app/Contents/Resources)
 
 		target_link_options(${BUILD_NAME} PRIVATE -headerpad_max_install_names)
+		target_link_libraries(${PROJECT_NAME} LINK_PUBLIC "-framework OpenGL")
 
 		file(COPY cmake/mac-patch-dylib.sh DESTINATION ${CMAKE_BINARY_DIR}) # Helper script
 	endif()
