--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,10 +14,14 @@ option(CLANG_TIDY 	"Run clang tidy" OFF)
 option(CPPCHECK 	"Run cppcheck" OFF)
 option(IMGUI 		"Include GUI" OFF)
 option(TRACY 		"Include Tracy" OFF)
-option(SANITIZE 	"Use address sanitizer" OFF)
+option(ADDRESS	 	"Use address sanitizer" OFF)
+option(LEAK			"Use leak sanitizer" OFF)
+option(UNDEFINED	"Use undefined sanitizer" OFF)
 option(ANDROID		"Build for android" OFF)
 option(OPTIMIZE		"Optimize a lot" OFF)
 option(MOLD			"Use mold" OFF)
+option(X11			"Force x11" OFF)
+option(TRACY_ENABLE "Enable Tracy" OFF)
 #CMAKE_BUILD_TYPE Release Debug
 
 if(CHECKS STREQUAL ON)
@@ -139,6 +143,9 @@ else()
 endif()
 
 include_directories(include)
+include_directories(external/tracy/public)
+
+add_subdirectory(external/tracy)
 
 if(NOT ANDROID)
 	if(WEB)
@@ -220,6 +227,8 @@ else()
 
 	target_link_libraries(${BUILD_NAME} PRIVATE SDL3::SDL3) # SDL3_image::SDL3_image)
 endif()
+
+target_link_libraries(${BUILD_NAME} PUBLIC Tracy::TracyClient)
 
 if (NOT ANDROID)
 	find_package(assimp REQUIRED)
@@ -337,10 +346,25 @@ if(CPPCHECK STREQUAL ON)
 endif()
 
 #Sanitize
-if(SANITIZE STREQUAL ON)
+if(ADDRESS STREQUAL ON)
 	message("Sanitizer enabled")
-	target_compile_options(${BUILD_NAME} PRIVATE -fsanitize=address -fsanitize=leak -fsanitize=undefined --coverage -g -fno-omit-frame-pointer -O0 -fno-optimize-sibling-calls)
-	target_link_options(${BUILD_NAME} PRIVATE -fsanitize=address -fsanitize=leak -fsanitize=undefined --coverage -g -O0)
+	target_compile_options(${BUILD_NAME} PRIVATE -fsanitize=address -DADDRESS --coverage -g -fno-omit-frame-pointer -O0 -fno-optimize-sibling-calls)
+	target_link_options(${BUILD_NAME} PRIVATE -fsanitize=address --coverage -g -O0)
+endif()
+if(LEAK STREQUAL ON)
+	message("Sanitizer enabled")
+	target_compile_options(${BUILD_NAME} PRIVATE -fsanitize=leak --coverage -g -fno-omit-frame-pointer -O0 -fno-optimize-sibling-calls)
+	target_link_options(${BUILD_NAME} PRIVATE -fsanitize=leak --coverage -g -O0)
+endif()
+if(UNDEFINED STREQUAL ON)
+	message("Sanitizer enabled")
+	target_compile_options(${BUILD_NAME} PRIVATE -fsanitize=undefined -DADDRESS --coverage -g -fno-omit-frame-pointer -O0 -fno-optimize-sibling-calls)
+	target_link_options(${BUILD_NAME} PRIVATE -fsanitize=undefined --coverage -g -O0)
+endif()
+
+if(X11 STREQUAL ON)
+	message("Forcing x11")
+	target_compile_options(${BUILD_NAME} PRIVATE -DX11)
 endif()
 
 #do LTO
