--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,13 +15,13 @@ option(CPPCHECK 	"Run cppcheck" OFF)
 option(IMGUI 		"Include GUI" OFF)
 option(TRACY 		"Include Tracy" OFF)
 option(ADDRESS	 	"Use address sanitizer" OFF)
-option(LEAK			"Use leak sanitizer" OFF)
+option(LEAK		"Use leak sanitizer" OFF)
 option(UNDEFINED	"Use undefined sanitizer" OFF)
 option(ANDROID		"Build for android" OFF)
 option(OPTIMIZE		"Optimize a lot" OFF)
-option(MOLD			"Use mold" OFF)
-option(X11			"Force x11" OFF)
-option(TRACY_ENABLE "Enable Tracy" OFF)
+option(MOLD		"Use mold" OFF)
+option(X11		"Force x11" OFF)
+option(TRACY_ENABLE 	"Enable Tracy" OFF)
 #CMAKE_BUILD_TYPE Release Debug
 
 if(CHECKS STREQUAL ON)
@@ -275,7 +275,7 @@ if(MSVC)
 	endif()
 else()
 	if(DEBUG)
-		target_compile_options(${BUILD_NAME} PRIVATE -Wall -Wextra -Werror -g -Og -Wfloat-equal -Wundef -Wshadow -Wpointer-arith -Wpointer-arith -Wwrite-strings)
+		target_compile_options(${BUILD_NAME} PRIVATE -Wall -Wextra -Werror -g -Og -Wfloat-equal -Wundef -Wshadow -Wpointer-arith -Wpointer-arith -Wwrite-strings -Wno-unknown-warning-option)
 		target_compile_definitions(${BUILD_NAME} PRIVATE -DDEBUG -D_DEBUG)
 	else()
 		target_compile_options(${BUILD_NAME} PRIVATE -O3)
