--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -361,8 +361,8 @@ if(LEAK STREQUAL ON)
 endif()
 if(UNDEFINED STREQUAL ON)
 	message("Sanitizer enabled")
-	target_compile_options(${BUILD_NAME} PRIVATE -fsanitize=undefined -DADDRESS --coverage -g -fno-omit-frame-pointer -O0 -fno-optimize-sibling-calls)
-	target_link_options(${BUILD_NAME} PRIVATE -fsanitize=undefined --coverage -g -O0)
+	target_compile_options(${BUILD_NAME} PRIVATE -fsanitize=undefined -DADDRESS -g -fno-omit-frame-pointer -O0 -fno-optimize-sibling-calls)
+	target_link_options(${BUILD_NAME} PRIVATE -fsanitize=undefined -g -O0)
 endif()
 
 if(X11 STREQUAL ON)
