--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -162,7 +162,6 @@ include_directories(include)
 if(NOT ANDROID)
 	if(WEB)
 		find_package(SDL3 REQUIRED CONFIG REQUIRED COMPONENTS SDL3-static)
-		# find_package(SDL3_image REQUIRED CONFIG REQUIRED COMPONENTS SDL3_image-static)
 
 		set(CMAKE_EXECUTABLE_SUFFIX .js)
 		
@@ -246,7 +245,7 @@ if (NOT ANDROID)
 	if (assimp_FOUND)
 		link_directories(${ASSIMP_LIBRARY_DIR})
 		include_directories(${ASSIMP_INCLUDE_DIRS})
-		target_link_libraries (${BUILD_NAME} PRIVATE ${ASSIMP_LIBRARIES})
+		target_link_libraries(${BUILD_NAME} PRIVATE assimp::assimp)
 		message("Found assimp: ${ASSIMP_LIBRARIES}")
 		# set(ASSIMP_LIBRARY "assimp")
 		# add_library(${ASSIMP_LIBRARY} SHARED IMPORTED)
@@ -254,6 +253,20 @@ if (NOT ANDROID)
 	else()
 		message(FATAL_ERROR "Assimp not found")
 	endif()
+else()
+	add_library(assimp::assimp SHARED IMPORTED) # or STATIC instead of SHARED
+	set_target_properties(assimp::assimp PROPERTIES
+	  IMPORTED_LOCATION "/usr/local/lib/libassimp.so"
+	  INTERFACE_INCLUDE_DIRECTORIES "/usr/local/include"
+	)
+
+	add_library(assimp::android_jniiosystem SHARED IMPORTED) # or STATIC instead of SHARED
+	set_target_properties(assimp::android_jniiosystem PROPERTIES
+	  IMPORTED_LOCATION "/usr/local/lib/libandroid_jniiosystem.a"
+	  INTERFACE_INCLUDE_DIRECTORIES "/usr/local/include/"
+	)
+
+	target_link_libraries(${BUILD_NAME} PRIVATE assimp::assimp assimp::android_jniiosystem)
 endif()
 
 if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND NOT ANDROID)
