Fix bugs + buttons!
Former-commit-id: c27b291ffc3b52a9205055cf2752416320666482

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,9 +69,10 @@ src/actors/sun.cpp
 src/actors/cube.cpp
 
 src/ui/buttonComponent.cpp
+src/ui/controlUI.cpp
+src/ui/mainMenu.cpp
 src/ui/UIComponent.cpp
 src/ui/UIScreen.cpp
-src/ui/controlUI.cpp
 
 #Headers
 include/game.hpp
@@ -105,9 +106,10 @@ include/actors/sun.hpp
 include/actors/cube.hpp
 
 include/ui/buttonComponent.hpp
+include/ui/controlUI.hpp
+include/ui/mainMenu.hpp
 include/ui/UIComponent.hpp
 include/ui/UIScreen.hpp
-include/ui/controlUI.hpp
 
 #External
 src/third_party/stb_image.c
